[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/levels/start/Main.gd" type="Script" id=1]
[ext_resource path="res://scenes/entities/enemy_pepe/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/tiles/generic_map/generic_map.tres" type="TileSet" id=3]
[ext_resource path="res://scenes/entities/player/Player.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0.709351, -0.598694, 0, 0, 0, 0, 1022.53, -0.912285, 0, 0, 0, 0, 1023.77, 599.899, 0, 0, 0, 0, 0, 600, 0, 0, 0, 0, 0.709351, -0.598694 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="Tiles z-1" type="Node" parent="."]

[node name="TileMap" type="TileMap" parent="Tiles z-1"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -1, 0, 65537, -65536, 0, 65537, -65535, 0, 65537, -65534, 0, 65537, -65533, 0, 65537, -65532, 0, 65537, -65531, 0, 65537, -65530, 0, 65537, -65529, 0, 65537, -65528, 0, 65537, -65527, 0, 65537, -65526, 0, 65537, -65525, 0, 65537, -65524, 0, 65537, -65523, 0, 65537, -65522, 0, 65537, -65521, 0, 65537, -65520, 0, 65537, -65519, 0, 65537, -65518, 0, 65537, -65517, 0, 65537, -65516, 0, 65537, -65515, 0, 65537, -65514, 0, 65537, -65513, 0, 65537, -65512, 0, 65537, -65511, 0, 65537, -65510, 0, 65537, -65509, 0, 65537, -65508, 0, 65537, -65507, 0, 65537, -65506, 0, 65537, -65505, 0, 65537, -65504, 0, 65537, 65535, 0, 65537, 32, 0, 65537, 131071, 0, 65537, 65568, 0, 65537, 196607, 0, 65537, 131104, 0, 65537, 262143, 0, 0, 196608, 0, 1, 196609, 0, 1, 196610, 0, 1, 196611, 0, 1, 196612, 0, 1, 196613, 0, 1, 196614, 0, 1, 196615, 0, 2, 196640, 0, 65537, 196683, 0, 65537, 196684, 0, 65537, 196685, 0, 65537, 196686, 0, 65537, 196687, 0, 65537, 196688, 0, 65537, 196689, 0, 65537, 196690, 0, 65537, 196691, 0, 65537, 196692, 0, 65537, 196693, 0, 65537, 196694, 0, 65537, 196695, 0, 65537, 196696, 0, 0, 196697, 0, 1, 196698, 0, 1, 196699, 0, 2, 327679, 0, 131072, 262144, 0, 131073, 262145, 0, 131073, 262146, 0, 131073, 262147, 0, 131073, 262148, 0, 131073, 262149, 0, 131073, 262150, 0, 131073, 262151, 0, 131074, 262176, 0, 65537, 262219, 0, 65537, 262232, 0, 65536, 262233, 0, 65537, 262234, 0, 65537, 262235, 0, 65538, 393215, 0, 65537, 327712, 0, 65537, 327755, 0, 65537, 327766, 0, 0, 327767, 0, 1, 327768, 0, 65537, 327769, 0, 65537, 327770, 0, 131073, 327771, 0, 131074, 458751, 0, 65537, 393248, 0, 65537, 393291, 0, 65537, 393302, 0, 65536, 393303, 0, 65537, 393304, 0, 65537, 393305, 0, 131074, 393307, 0, 65537, 524287, 0, 65537, 458784, 0, 65537, 458785, 0, 65537, 458786, 0, 65537, 458787, 0, 65537, 458788, 0, 65537, 458789, 0, 65537, 458790, 0, 65537, 458791, 0, 65537, 458792, 0, 65537, 458793, 0, 65537, 458794, 0, 65537, 458795, 0, 65537, 458796, 0, 65537, 458797, 0, 65537, 458798, 0, 65537, 458799, 0, 65537, 458800, 0, 65537, 458801, 0, 65537, 458802, 0, 65537, 458803, 0, 65537, 458804, 0, 65537, 458805, 0, 65537, 458806, 0, 65537, 458807, 0, 65537, 458808, 0, 65537, 458809, 0, 65537, 458810, 0, 65537, 458811, 0, 65537, 458812, 0, 65537, 458813, 0, 65537, 458814, 0, 65537, 458815, 0, 65537, 458816, 0, 65537, 458817, 0, 65537, 458818, 0, 65537, 458819, 0, 65537, 458820, 0, 65537, 458821, 0, 65537, 458822, 0, 65537, 458823, 0, 65537, 458824, 0, 65537, 458825, 0, 65537, 458826, 0, 65537, 458827, 0, 65537, 458838, 0, 65536, 458839, 0, 65537, 458840, 0, 65538, 458843, 0, 65537, 589823, 0, 65537, 524374, 0, 131072, 524375, 0, 131073, 524376, 0, 65537, 524377, 0, 2, 524379, 0, 65537, 655359, 0, 65537, 589912, 0, 65536, 589913, 0, 65537, 589914, 0, 1, 589915, 0, 2, 720895, 0, 65537, 655372, 0, 0, 655373, 0, 1, 655374, 0, 1, 655375, 0, 1, 655376, 0, 1, 655377, 0, 1, 655378, 0, 1, 655379, 0, 1, 655380, 0, 1, 655381, 0, 1, 655382, 0, 1, 655383, 0, 2, 655448, 0, 65536, 655449, 0, 65537, 655450, 0, 65537, 655451, 0, 65538, 786431, 0, 65537, 720908, 0, 131072, 720909, 0, 131073, 720910, 0, 131073, 720911, 0, 131073, 720912, 0, 131073, 720913, 0, 131073, 720914, 0, 131073, 720915, 0, 131073, 720916, 0, 131073, 720917, 0, 131073, 720918, 0, 131073, 720919, 0, 131074, 720928, 0, 65537, 720929, 0, 65537, 720930, 0, 65537, 720931, 0, 65537, 720932, 0, 65537, 720933, 0, 65537, 720934, 0, 65537, 720935, 0, 65537, 720936, 0, 65537, 720937, 0, 65537, 720938, 0, 65537, 720939, 0, 65537, 720940, 0, 65537, 720941, 0, 65537, 720942, 0, 65537, 720943, 0, 65537, 720944, 0, 65537, 720945, 0, 65537, 720946, 0, 65537, 720947, 0, 65537, 720948, 0, 65537, 720949, 0, 65537, 720950, 0, 65537, 720951, 0, 65537, 720952, 0, 65537, 720953, 0, 65537, 720954, 0, 65537, 720955, 0, 65537, 720956, 0, 65537, 720957, 0, 65537, 720958, 0, 65537, 720959, 0, 65537, 720960, 0, 65537, 720961, 0, 65537, 720962, 0, 65537, 720963, 0, 65537, 720964, 0, 65537, 720965, 0, 65537, 720966, 0, 65537, 720967, 0, 65537, 720968, 0, 65537, 720969, 0, 65537, 720970, 0, 65537, 720971, 0, 65537, 720972, 0, 65537, 720973, 0, 65537, 720974, 0, 65537, 720975, 0, 65537, 720976, 0, 65537, 720977, 0, 65537, 720978, 0, 65537, 720981, 0, 65537, 720982, 0, 65537, 720983, 0, 65537, 720984, 0, 131072, 720985, 0, 131073, 720986, 0, 131073, 720987, 0, 131074, 851967, 0, 65537, 786464, 0, 65537, 786514, 0, 65537, 786517, 0, 65537, 917503, 0, 65537, 852000, 0, 65537, 852050, 0, 65537, 852053, 0, 65537, 983039, 0, 0, 917504, 0, 1, 917505, 0, 1, 917506, 0, 2, 917536, 0, 65537, 917586, 0, 65537, 917589, 0, 65537, 1048575, 0, 131072, 983040, 0, 131073, 983041, 0, 131073, 983042, 0, 131074, 983072, 0, 65537, 983122, 0, 65537, 983125, 0, 65537, 1114111, 0, 65537, 1048590, 0, 0, 1048591, 0, 1, 1048592, 0, 1, 1048593, 0, 1, 1048594, 0, 1, 1048595, 0, 1, 1048596, 0, 1, 1048597, 0, 1, 1048598, 0, 2, 1048608, 0, 65537, 1048658, 0, 65537, 1048661, 0, 65537, 1179647, 0, 65537, 1114126, 0, 65536, 1114127, 0, 65537, 1114128, 0, 65537, 1114129, 0, 65537, 1114130, 0, 65537, 1114131, 0, 65537, 1114132, 0, 65537, 1114133, 0, 65537, 1114134, 0, 65538, 1114141, 0, 0, 1114142, 0, 1, 1114143, 0, 1, 1114144, 0, 2, 1114194, 0, 65537, 1114197, 0, 65537, 1245183, 0, 65537, 1179662, 0, 65536, 1179663, 0, 65537, 1179664, 0, 65537, 1179665, 0, 65537, 1179666, 0, 65537, 1179667, 0, 65537, 1179668, 0, 65537, 1179669, 0, 65537, 1179670, 0, 65538, 1179677, 0, 65536, 1179678, 0, 65537, 1179679, 0, 65537, 1179680, 0, 65538, 1179730, 0, 65537, 1179733, 0, 65537, 1310719, 0, 65537, 1245184, 0, 65537, 1245185, 0, 65537, 1245186, 0, 65537, 1245187, 0, 65537, 1245188, 0, 65537, 1245189, 0, 65537, 1245190, 0, 65537, 1245191, 0, 65537, 1245192, 0, 65537, 1245193, 0, 65537, 1245194, 0, 65537, 1245195, 0, 65537, 1245196, 0, 65537, 1245197, 0, 65537, 1245198, 0, 131072, 1245199, 0, 131073, 1245200, 0, 131073, 1245201, 0, 131073, 1245202, 0, 131073, 1245203, 0, 131073, 1245204, 0, 131073, 1245205, 0, 131073, 1245206, 0, 131074, 1245207, 0, 65537, 1245208, 0, 65537, 1245209, 0, 65537, 1245210, 0, 65537, 1245211, 0, 65537, 1245212, 0, 65537, 1245213, 0, 131072, 1245214, 0, 131073, 1245215, 0, 131073, 1245216, 0, 131074, 1245266, 0, 65537, 1245269, 0, 65537, 1310802, 0, 65537, 1310805, 0, 65537, 1376338, 0, 65537, 1376341, 0, 65537, 1441874, 0, 65537, 1441877, 0, 65537, 1507410, 0, 65537, 1507413, 0, 65537, 1572946, 0, 65537, 1572949, 0, 65537, 1638482, 0, 65537, 1638485, 0, 65537, 1704018, 0, 65537, 1704021, 0, 65537, 1769554, 0, 65537, 1769557, 0, 65537, 1835090, 0, 65537, 1835093, 0, 65537, 1900626, 0, 65537, 1900629, 0, 65537, 1966162, 0, 65537, 1966165, 0, 65537, 2031698, 0, 65537, 2031701, 0, 65537, 2097234, 0, 65537, 2097237, 0, 65537, 2162770, 0, 65537, 2162773, 0, 65537, 2228306, 0, 65537, 2228309, 0, 65537, 2293842, 0, 65537, 2293845, 0, 65537, 2359378, 0, 65537, 2359381, 0, 65537, 2424914, 0, 65537, 2424917, 0, 65537, 2490450, 0, 65537, 2490453, 0, 65537, 2555986, 0, 65537, 2555989, 0, 65537, 2621522, 0, 65537, 2621525, 0, 65537, 2687058, 0, 65537, 2687061, 0, 65537, 2752594, 0, 65537, 2752597, 0, 65537, 2818130, 0, 65537, 2818133, 0, 65537, 2883666, 0, 65537, 2883669, 0, 65537, 2949202, 0, 65537, 2949205, 0, 65537, 3014738, 0, 65537, 3014741, 0, 65537, 3080274, 0, 65537, 3080277, 0, 65537, 3145810, 0, 65537, 3145813, 0, 65537, 3211346, 0, 65537, 3211349, 0, 65537, 3276882, 0, 65537, 3276885, 0, 65537, 3342418, 0, 65537, 3342421, 0, 65537, 3407954, 0, 65537, 3407957, 0, 65537, 3473490, 0, 65537, 3473493, 0, 65537, 3539026, 0, 65537, 3539029, 0, 65537, 3604562, 0, 65537, 3604565, 0, 65537, 3670098, 0, 65537, 3670101, 0, 65537, 3735625, 0, 65537, 3735626, 0, 65537, 3735627, 0, 65537, 3735628, 0, 65537, 3735629, 0, 65537, 3735630, 0, 65537, 3735631, 0, 65537, 3735632, 0, 65537, 3735633, 0, 65537, 3735634, 0, 65537, 3735637, 0, 65537, 3735638, 0, 65537, 3735639, 0, 65537, 3735640, 0, 65537, 3735641, 0, 65537, 3735642, 0, 65537, 3735643, 0, 65537, 3735644, 0, 65537, 3735645, 0, 65537, 3735646, 0, 65537, 3735647, 0, 65537, 3735648, 0, 65537, 3801161, 0, 65537, 3801184, 0, 65537, 3866697, 0, 65537, 3866720, 0, 65537, 3932233, 0, 65537, 3932256, 0, 65537, 3997769, 0, 65537, 3997792, 0, 65537, 4063305, 0, 65537, 4063328, 0, 65537, 4128841, 0, 65537, 4128864, 0, 65537, 4194377, 0, 65537, 4194400, 0, 65537, 4259913, 0, 65537, 4259936, 0, 65537, 4325449, 0, 65537, 4325472, 0, 65537, 4390985, 0, 65537, 4391008, 0, 65537, 4456521, 0, 65537, 4456544, 0, 65537, 4522057, 0, 65537, 4522058, 0, 65537, 4522059, 0, 65537, 4522060, 0, 65537, 4522061, 0, 65537, 4522062, 0, 65537, 4522063, 0, 65537, 4522064, 0, 65537, 4522065, 0, 65537, 4522066, 0, 65537, 4522067, 0, 65537, 4522068, 0, 65537, 4522069, 0, 65537, 4522070, 0, 65537, 4522071, 0, 65537, 4522072, 0, 65537, 4522073, 0, 65537, 4522074, 0, 65537, 4522075, 0, 65537, 4522076, 0, 65537, 4522077, 0, 65537, 4522078, 0, 65537, 4522079, 0, 65537, 4522080, 0, 65537 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( -208.421, -168.421 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 63.488, 46.2689 )

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]
position = Vector2( 0.709351, -0.598694 )
rotation = -0.000306871

[connection signal="body_entered" from="Player" to="." method="_on_Player_body_entered"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
